refactor: unify session storage, remove legacy adapters, and introduce agentId routing
Phase 1 (#25 P2): Fix tenantId/agentId sync in SessionTaskEntity
- Add agentId field + index to SessionTaskEntity
- Fix Claude syncSessionTask missing tenantId (from SessionEntity lookup)
- Fix DispatchTaskDTO mapping to prefer real agentId over providerType

Phase 2 (#23 cleanup): Unify session message endpoints and remove isCodexBackend
- Add 4 unified worker session endpoints to TaskController (/tasks/workers/...)
- Add TaskQueryProvider SPI methods for worker session operations
- Implement in ClaudeTaskService (delegates to ClaudeWorkerClient)
- Migrate frontend from /claude-tasks/worker/... to /tasks/workers/...
- Remove isCodexBackend, merge ALL_CLAUDE_MODELS + ALL_CODEX_MODELS into unified ALL_MODELS

Phase 3 (#25 P3): Migration scripts and legacy entity cleanup
- Write 4 idempotent migration SQL scripts (claude_tasks, codex_tasks, conversation_configs, deleted_sessions)
- Remove ConversationConfigService dependency from ClaudeTaskService (30+ call sites)
- Replace with direct SessionEntity operations + private helpers
- Replace DeletedClaudeSessionEntity with sessions.deletedAt soft delete
- Add SessionEntityRepository query methods for interaction state and search

Phase 4 (#24): Introduce agentId-first routing in frontend
- Add selectedAgentId state and resolvedWorkerId computed to ClaudeWorkerView
- Auto-resolve agentId from worker+directory selection
- Pass agentId in all task creation and resume API calls
- Backend already supports agentId > directoryId > workerId priority

All 55 backend tests pass. Frontend build succeeds.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>